--- a/styles.css
+++ b/styles.css
@@ -528,7 +528,7 @@ li{
     border-right: 5px solid #004271;
     box-sizing: border-box;
 }
-h2{
+th{
     font-size: 1em;
     text-align: center;
     margin-bottom: 20px;
@@ -538,7 +538,6 @@ h2{
     margin-left: 10%;
     margin-bottom: 50px;
 }
-
 
 /*CONTACT*/
 
